# half-rs

./: .clog.toml  .editorconfig  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  appveyor.yml  appveyor_rust_install.ps1  build.rs  rustfmt.toml
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: cross.yml  rust.yml
benches/: convert.rs
ci/: Cargo.lock.1.32.0
devel/: Cargo.toml  convert.rs
devel/src/: lib.rs
devel/tests/: bfloat_tests.rs  binary16_tests.rs
float16-derive/src/: vec.rs
float16-ext/src/: lib.rs
src/: bfloat.rs  binary16.rs  error.rs  leading_zeros.rs  lib.rs  num_traits.rs  rand_distr.rs  sample.rs  slice.rs  try_from.rs  vec.rs
src/bfloat/: convert.rs
src/binary16/: arch.rs  convert.rs
src/binary16/arch/: aarch64.rs  x86.rs
src/binary16/convert/: aarch64.rs
