[package]
name = "half"
# Remember to keep in sync with html_root_url crate attribute
version = "2.2.1"
authors = ["Kathryn Long <squeeself@gmail.com>"]
description = "Half-precision floating point f16 and bf16 types for Rust implementing the IEEE 754-2008 standard binary16 and bfloat16 types."
repository = "https://github.com/starkat99/half-rs"
readme = "README.md"
keywords = ["f16", "bfloat16", "no_std"]
license = "MIT OR Apache-2.0"
categories = ["no-std", "data-structures", "encoding"]
edition = "2021"
rust-version = "1.58"
exclude = [".git*", ".editorconfig"]

[features]
default = ["std"]
std = ["alloc"]
use-intrinsics = []
alloc = []

[dependencies]
bytemuck = { version = "1.4.1", default-features = false, features = [
    "derive",
], optional = true }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }
num-traits = { version = "0.2.14", default-features = false, features = ["libm"], optional = true }
zerocopy = { version = "0.6.0", default-features = false, optional = true }

[target.'cfg(target_arch = "spirv")'.dependencies]
crunchy = "0.2.2"

[dev-dependencies]
criterion = "0.4.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8.4"
crunchy = "0.2.2"

[[bench]]
name = "convert"
harness = false

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
features = ["std", "serde", "bytemuck", "num-traits", "zerocopy"]
