[package]
name = "float16"
# Remember to keep in sync with html_root_url crate attribute
version = "0.1.0"
authors = ["Kathryn Long <squeeself@gmail.com>", "Alex Huszagh <ahuszagh@gmail.com>"]
description = "Half-precision floating point f16 and bf16 types for Rust implementing the IEEE 754-2008 standard binary16 and bfloat16 types."
repository = "https://github.com/Alexhuszagh/float16"
readme = "README.md"
keywords = ["f16", "bfloat16", "no_std"]
license = "MIT OR Apache-2.0"
categories = ["no-std", "data-structures", "encoding"]
edition = "2021"
rust-version = "1.56"
exclude = [".git*", ".editorconfig", ".circleci"]

[features]
default = ["std"]
std = []
# TODO: Remove these after here
serde = []
num-traits = []
bytemuck = []
rand_distr = []
alloc = []

[dependencies]
cfg-if = "1.0.0"

[dev-dependencies]
criterion = "0.5.1"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8.5"
crunchy = "0.2.2"

[[bench]]
name = "convert"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
