[package]
name = "float16"
# Remember to keep in sync with html_root_url crate attribute
version = "0.1.1"
authors = ["Kathryn Long <squeeself@gmail.com>", "Alex Huszagh <ahuszagh@gmail.com>"]
description = "Half-precision floating point f16 and bf16 types for Rust implementing the IEEE 754-2008 standard binary16 and bfloat16 types."
repository = "https://github.com/Alexhuszagh/float16"
readme = "README.md"
keywords = ["f16", "bfloat16", "no_std"]
license = "MIT OR Apache-2.0"
categories = ["no-std", "data-structures", "encoding"]
edition = "2021"
rust-version = "1.60"
exclude = [".git*", ".editorconfig", ".circleci"]

[features]
default = ["std"]
std = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(kani)',
    'cfg(target_arch, values("spirv"))',
    'cfg(target_feature, values("IntegerFunctions2INTEL", "SPV_INTEL_shader_integer_functions2"))',
    'cfg(has_x86_intrinsics)',
    'cfg(has_aarch64_intrinsics)',
]

[dependencies]
cfg-if = "1.0.0"

[build-dependencies]
rustc_version = "0.2"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
